[package]
name = "vkdocs-rs"
version = "0.1.0"
edition = "2021"
description = "Supplementary VkDocs Rust library"
license = "BSD-3-Clause"
authors = ["Georgiy Belyanin <belyaningeorge@ya.ru>"]
repository = "https://github.com/georgiy-belyanin/vkdocs-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
uuid = { version = "1.1", features = ["v4"] }
chrono = "0.4"
tempdir = "0.3"
